--- a/src/main/resources/static/views/projectInfo-tl.html
+++ b/src/main/resources/static/views/projectInfo-tl.html
@@ -33,6 +33,7 @@
                 <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;
                 <strong>{{comment.userFrom.firstName}} {{comment.userFrom.lastName}}</strong>&nbsp;
                 <span>on {{comment.createDate | date:'mediumDate'}}</span>
+                <span ng-if="comment.lastModified != null">last modified on {{comment.lastModified | date:'mediumDate'}}</span>
                 <div class="f-r" ng-if="comment.userFrom.email == user.name">
                     <a href ng-click="toggleEditingComment(comment)"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;
                     <a href ng-click="deleteComment(comment.id)"><i class="fa fa-times" aria-hidden="true"></i></a>
@@ -40,13 +41,15 @@
                 <div class="p-l-20">
                     <span ng-hide="comment.editingComment">{{comment.text}}</span>
                     <form ng-show="comment.editingComment" ng-submit="editingComment = false">
-                        <input
+                        <textarea
                                 type="text"
+                                rows="2"
                                 ng-model="comment.text"
                                 class="width-100 input-border-light"
-                        />
+                        >{{comment.text}}</textarea>
                         <br/>
-                        <button class="btn" type="submit">Save</button>
+                        <button ng-click="editComment(comment)" class="btn" type="submit">Save</button>
+                        <button ng-click="toggleEditingComment(comment)" class="btn" type="submit">Cancel</button>
                     </form>
                 </div>
             </div>
