project editing done

--- a/src/main/resources/static/views/editTodoTask.html
+++ b/src/main/resources/static/views/editTodoTask.html
@@ -1,4 +1,4 @@
-<div class="modal fade m-r--16" id="editTodoTaskModal" xmlns:date="http://www.w3.org/1999/xhtml">
+<div class="modal fade m-r--16" id="editTodoTaskModal">
     <div class="modal-dialog">
         <div class="panel panel-red">
             <div class="panel-heading">
