--- a/src/main/resources/static/views/editProject.html
+++ b/src/main/resources/static/views/editProject.html
@@ -1,45 +1,45 @@
-<div class="modal fade m-r--16" id="newProjectModal">
+<div class="modal fade m-r--16" id="editProjectModal">
     <div class="modal-dialog">
         <div class="panel panel-yellow">
             <div class="panel-heading">
-                New Project
+                Edit Project
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
-                <form name="newProjectForm" role="form" novalidate>
+                <form name="editProjectForm" role="form" novalidate>
                     <div class="form-body pal">
 
                         <div class="form-group">
-                            <label for="name" class="control-label">
+                            <label for="edit_name" class="control-label">
                                 Name*
                             </label>
                             <div ng-class="{
                                     'has-error' :
-                                        newProjectForm.name.$invalid && !newProjectForm.name.$pristine,
+                                        editProjectForm.edit_name.$invalid && !editProjectForm.edit_name.$pristine,
                                     'has-success' :
-                                        newProjectForm.name.$valid && !newProjectForm.name.$pristine}">
-                                    <input
-                                            id="name"
-                                            name="name"
-                                            type="text"
-                                            class="form-control"
-                                            ng-model="project.name"
-                                            required
-                                    >
+                                        editProjectForm.edit_name.$valid && !editProjectForm.edit_name.$pristine}">
+                                <input
+                                        id="edit_name"
+                                        name="edit_name"
+                                        type="text"
+                                        class="form-control"
+                                        ng-model="project.name"
+                                        required
+                                >
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="proj_description" class="control-label">
+                            <label for="edit_proj_description" class="control-label">
                                 Description*
                             </label>
                             <div ng-class="{
                                     'has-error' :
-                                        newProjectForm.proj_description.$invalid && !newProjectForm.proj_description.$pristine,
+                                        editProjectForm.edit_proj_description.$invalid && !editProjectForm.edit_proj_description.$pristine,
                                     'has-success' :
-                                        newProjectForm.proj_description.$valid && !newProjectForm.proj_description.$pristine}">
+                                        editProjectForm.edit_proj_description.$valid && !editProjectForm.edit_proj_description.$pristine}">
                                     <textarea
-                                            id="proj_description"
-                                            name="proj_description"
+                                            id="edit_proj_description"
+                                            name="edit_proj_description"
                                             type="text"
                                             rows="5"
                                             class="form-control"
@@ -49,25 +49,28 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="details" class="control-label">
+                            <label for="edit_details" class="control-label">
                                 Details
                             </label>
                             <div>
-                                <div id="details" ckeditor="options" ng-model="project.details"></div>
+                                <div id="edit_details" ckeditor="options" ng-model="project.details"></div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="deadline" class="control-label">
-                                Deadline</label>
+                            <label for="edit_proj_deadline" class="control-label">
+                                Deadline*</label>
                             <div>
                                 <input
                                         class="form-control"
-                                        id="deadline"
+                                        id="edit_proj_deadline"
+                                        placeholder="{{project.deadline | date:'MM/dd/yyyy'}}"
                                         kendo-date-picker
                                         k-ng-model="project.deadline"
                                         k-options="datePickerOptions"
+                                        k-on-change="isDateInvalid(project.deadline)"
                                 />
                             </div>
+                            <span ng-if="invalidDate">Wrong date!</span>
                         </div>
 
 
@@ -79,7 +82,7 @@
                                 class="btn btn-blue"
                                 ng-disabled="newProjectForm.$invalid"
                                 ng-click="submit(project)">
-                            Add project
+                            Save
                         </button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">
                             Close
