deleting projects without files done

--- a/src/main/resources/static/views/projectInfo-tl.html
+++ b/src/main/resources/static/views/projectInfo-tl.html
@@ -9,6 +9,7 @@
             </div>
             <div class="p-t-7 m-l-10 f-r plus_ico">
                 <a href class="info-project" ng-click="openEdit(project)"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                <a href class="info-project" ng-click="openDelete()"><i class="fa fa-times" aria-hidden="true"></i></a>
             </div>
         </div>
 
@@ -204,7 +205,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
+
+
+
