--- a/src/main/resources/static/views/projectInfo-dev.html
+++ b/src/main/resources/static/views/projectInfo-dev.html
@@ -2,37 +2,169 @@
     <div id="title-breadcrumb-option-demo" class="page-title-breadcrumb">
         <div class="page-header pull-left">
             <div class="page-title">
-                Project Name
+                {{project.name}}
+            </div>
+            <div>
+                Created at: {{project.createDate | date:'mediumDate'}}
             </div>
         </div>
 
         <div class="clearfix">
         </div>
     </div>
+
     <div ng-if="errorMessage" class="alert alert-danger m-t-15"><strong>Oops! </strong>{{ errorMessage }}</div>
+
     <div class="mbl p-t-15">
-        <div class="new-proj-btn">
-            <button class="btn btn-grey">
-                Edit Project
-            </button>
+        <div class="col-lg-7">
+            <h4>Description:</h4>
+            <p>{{project.description}}</p>
+            <hr class="light-grey">
+
+            <h4>Details:</h4>
+            <p ng-bind-html="project.details"></p>
+            <hr class="light-grey">
+
+            <h4>Comments:</h4>
+            <div ng-repeat="comment in project.comments" class="m-b-10">
+                <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;
+                <strong>{{comment.userFrom.firstName}} {{comment.userFrom.lastName}}</strong>&nbsp;
+                <span>on {{comment.createDate | date:'mediumDate'}}</span>
+                <span ng-if="comment.lastModified != null">last modified on {{comment.lastModified | date:'mediumDate'}}</span>
+                <div class="f-r" ng-if="comment.userFrom.email == user.name">
+                    <a href ng-click="toggleEditingComment(comment)"><i class="fa fa-pencil" aria-hidden="true"></i></a>&nbsp;
+                    <a href ng-click="deleteComment(comment.id)"><i class="fa fa-times" aria-hidden="true"></i></a>
+                </div>
+                <div class="p-l-20">
+                    <span ng-hide="comment.editingComment">{{comment.text}}</span>
+                    <form ng-show="comment.editingComment" ng-submit="editingComment = false">
+                        <textarea
+                                type="text"
+                                rows="2"
+                                ng-model="comment.text"
+                                class="width-100 input-border-light"
+                        >{{comment.text}}</textarea>
+                        <br/>
+                        <button ng-click="editComment(comment)" class="btn" type="submit">Save</button>
+                        <button ng-click="toggleEditingComment(comment)" class="btn" type="submit">Cancel</button>
+                    </form>
+                </div>
+            </div>
+            <div>
+                <a href ng-click="toggleCommentForm()"><h5><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;Add comment</h5></a>
+                <div class="panel db mbm m-l-14 comment_f" ng-show="commentForm">
+                    <div class="panel-body">
+                        <textarea
+                                type="text"
+                                rows="3"
+                                class="width-100 input-border-light"
+                                ng-model="newComment.text">
+                        </textarea>
+                        <div class="text-right">
+                            <button
+                                    type="button"
+                                    class="btn btn-grey"
+                                    ng-click="addComment(newComment)">
+                                Submit
+                            </button>
+                            <button
+                                    type="button"
+                                    class="btn btn-default"
+                                    ng-click="toggleCommentForm()">
+                                Cancel
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div>
-            <p>
-                <strong>Description:</strong>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
-            </p>
-        </div>
-        <div>
-            <p>
-                <strong>Deadline:</strong>
-                10/10/2010
-            </p>
+
+        <div class="col-lg-5 col-sm-6 col-md-3" id="sum_box">
+            <div class="panel profit mbm">
+                <div class="panel-body">
+                    <p class="icon">
+                        <i class="icon fa fa-clock-o"></i>
+                    </p>
+                    <h4 class="value">
+                        <span>{{project.deadline | date:'mediumDate'}}</span></h4>
+                    <p class="description">
+                        Deadline</p>
+                    <div class="progress progress-sm mbn">
+                        <div role="progressbar" aria-valuenow="{{progressDeadline}}" aria-valuemin="0" aria-valuemax="100"
+                             ng-style="{'width':progressDeadline+'%'}" class="progress-bar progress-bar-danger">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel task mbm">
+                <div class="panel-body">
+                    <p class="icon">
+                        <i class="icon fa fa-signal"></i>
+                    </p>
+                    <h4 class="value">
+                        <span>215</span></h4>
+                    <p class="description">
+                        Tasks completed</p>
+                    <div class="progress progress-sm mbn">
+                        <div role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+                             style="width: 50%;" class="progress-bar progress-bar-success">
+                            <span class="sr-only">50% Complete (success)</span></div>
+                    </div>
+                    <hr class="light-grey">
+                    <div>
+                        <a ui-sref="home.tasks"><i class="fa fa-tasks ico-padding"></i></a>&nbsp;
+                        <a ui-sref="home.tasks"><i class="fa fa-bell-o ico-padding"></i></a>&nbsp;
+                        <i class="fa fa-spinner ico-padding"></i>&nbsp;
+                        <i class="fa fa-check ico-padding"></i>&nbsp;
+                        <i class="fa fa-thumbs-o-up ico-padding"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel task mbm" ng-if="project.files.length > 0">
+                <div class="panel-body">
+                    <p class="icon">
+                        <i class="icon fa fa-files-o"></i>
+                    </p>
+                    <h4 class="value">
+                        <span>{{project.files.length}}</span></h4>
+                    <p class="description">
+                        Attached
+                        <span ng-if="project.files.length == 1">file</span>
+                        <span ng-if="project.files.length != 1">files</span>
+                    </p>
+                    <div ng-repeat="file in project.files" ng-switch="getFileExt(file.name)" class="attached-files-list">
+                        <i ng-switch-when="pdf" class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                        <i ng-switch-when="doc" class="fa fa-file-word-o" aria-hidden="true"></i>
+                        <i ng-switch-when="docx" class="fa fa-file-word-o" aria-hidden="true"></i>
+                        <i ng-switch-when="zip" class="fa fa-file-archive-o" aria-hidden="true"></i>
+                        <i ng-switch-when="png" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="psd" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="jpeg" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="jpg" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="txt" class="fa fa-file-text-o" aria-hidden="true"></i>
+                        <i ng-switch-when="ppt" class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
+                        <i ng-switch-when="pptx" class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
+                        <i ng-switch-when="csv" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="xls" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="xlsx" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="htm" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="html" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="css" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="js" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="java" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-default class="fa fa-file-o" aria-hidden="true"></i>
+                        <span>&nbsp;{{file.name}}</span>
+                        <div class="f-r">
+                            <a href ng-click="downloadFile(file.id)" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+
