--- a/src/main/resources/static/views/projectInfo-tl.html
+++ b/src/main/resources/static/views/projectInfo-tl.html
@@ -117,7 +117,7 @@
                     </div>
                     <hr class="light-grey">
                     <div>
-                        <i class="fa fa-tasks ico-padding"></i>&nbsp;
+                        <a  ui-sref="home.tasks"><i class="fa fa-tasks ico-padding"></i></a>&nbsp;
                         <i class="fa fa-bell-o ico-padding"></i>&nbsp;
                         <i class="fa fa-spinner ico-padding"></i>&nbsp;
                         <i class="fa fa-check ico-padding"></i>&nbsp;
