--- a/src/main/resources/static/views/tasksProjectList-tl.html
+++ b/src/main/resources/static/views/tasksProjectList-tl.html
@@ -64,17 +64,17 @@
                         </a>
                     </th>
                     <th>
-                        <a href ng-click="sortType = 'deadline'; sortReverse = !sortReverse">
+                        <a href ng-click="sortType = 'assignedTo'; sortReverse = !sortReverse">
                             Assigned to
-                            <span ng-show="sortType == 'deadline' && !sortReverse" class="fa fa-caret-down"></span>
-                            <span ng-show="sortType == 'deadline' && sortReverse" class="fa fa-caret-up"></span>
+                            <span ng-show="sortType == 'assignedTo' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'assignedTo' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
                     </th>
                     <th>
-                        <a href ng-click="sortType = 'deadline'; sortReverse = !sortReverse">
+                        <a href ng-click="sortType = 'approved'; sortReverse = !sortReverse">
                             Approved
-                            <span ng-show="sortType == 'deadline' && !sortReverse" class="fa fa-caret-down"></span>
-                            <span ng-show="sortType == 'deadline' && sortReverse" class="fa fa-caret-up"></span>
+                            <span ng-show="sortType == 'approved' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'approved' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
                     </th>
                     <th>Actions</th>
@@ -104,7 +104,7 @@
                     </span>
                     </td>
                     <td>{{task.deadline | date:'mediumDate'}}</td>
-                    <td>{{task.assignedTo.firsName}} {{task.assignedTo.lastName}}</td>
+                    <td>{{task.assignedTo.firstName}} {{task.assignedTo.lastName}}</td>
                     <td>{{task.approved}}</td>
                     <td>
                         <a href ng-click="openEdit(task)"><i class="fa fa-pencil"></i></a>&nbsp;
