task assigneTo validation done

--- a/src/main/resources/static/views/tasksProjectList-tl.html
+++ b/src/main/resources/static/views/tasksProjectList-tl.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="panel-body">
-            <div ng-if="tasks.length == 0">You have no tasks! Maybe, it's time to create some.</div>
+            <div ng-if="tasks.length == 0">You have no tasks here</div>
             <table class="table table-hover table-striped" ng-if="tasks.length > 0">
                 <thead>
                 <tr>
