--- a/src/main/resources/static/views/newTaskForProject.html
+++ b/src/main/resources/static/views/newTaskForProject.html
@@ -3,10 +3,11 @@
         <div class="panel panel-green">
             <div class="panel-heading">
                 New Task
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close"  ng-click="close()" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
-                <form name="newProjectTaskForm" role="form" novalidate>
+                <h4 ng-if="developers.length==0" class="form-body pal">You can't create a task while there are no developers to do it</h4>
+                <form ng-if="developers.length>0" name="newProjectTaskForm" role="form" novalidate>
                     <div class="form-body pal">
                         <div class="form-group">
                             <label for="t_p_description" class="control-label">
@@ -36,7 +37,11 @@
                                 <div id="t_p_details" ckeditor="options" ng-model="task.details"></div>
                             </div>
                         </div>
-                        <div class="form-group"
+                        <div class="form-group">
+                            <label for="assignedTo" class="control-label">
+                                Developer*
+                            </label>
+                            <div
                              ng-class="{
                             'has-error' :
                                 newProjectTaskForm.assignedTo.$invalid && !newProjectTaskForm.assignedTo.$pristine,
@@ -51,6 +56,7 @@
                                     required>
                                 <option value="">Choose who will do the task</option>
                             </select>
+                                </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
@@ -103,7 +109,7 @@
                                 ng-click="submit(task)">
                             Add task
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                        <button type="button" class="btn btn-default" ng-click="close()">
                             Close
                         </button>
                     </div>
