--- a/src/main/resources/static/views/editProject.html
+++ b/src/main/resources/static/views/editProject.html
@@ -3,7 +3,7 @@
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 Edit Project
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
                 <form name="editProjectForm" role="form" novalidate>
@@ -84,7 +84,7 @@
                                 ng-click="submit(project)">
                             Save
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                        <button type="button" class="btn btn-default" ng-click="close()">
                             Close
                         </button>
                     </div>
