--- a/src/main/resources/static/views/newProject.html
+++ b/src/main/resources/static/views/newProject.html
@@ -3,7 +3,7 @@
         <div class="panel panel-yellow">
             <div class="panel-heading">
                 New Project
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
             </div>
             <div class="panel-body pan">
                 <form name="newProjectForm" role="form" novalidate>
@@ -81,7 +81,7 @@
                                 ng-click="submit(project)">
                             Add project
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                        <button type="button" class="btn btn-default" ng-click="close()">
                             Close
                         </button>
                     </div>
