--- a/src/main/resources/static/views/newTodoTask.html
+++ b/src/main/resources/static/views/newTodoTask.html
@@ -3,7 +3,7 @@
             <div class="panel panel-red">
                 <div class="panel-heading">
                     New Task
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
                 </div>
                 <div class="panel-body pan">
                     <form name="newTodoTaskForm" role="form" novalidate>
@@ -80,7 +80,7 @@
                                     ng-click="submit(task)">
                                 Add task
                             </button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <button type="button" class="btn btn-default" ng-click="close()">
                                 Close
                             </button>
                         </div>
